--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
+body{
+  background: linear-gradient(to right,#2f55ed,#e55465);
+  height: 140vh;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* <!----------------------------------!>
+/* ------------ Search BOX ------------*/
+.searchbar{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+.searchbar .main-searchbar h2{
+  font-size: 48px;
+  font-weight: bold;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.searchbar .main-searchbar input{
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  width: 250px;
+  height: 35px;
+  border-radius: 8px;
+  outline: none;
+  border: none;
+  padding: 8px 20px;
+  margin-bottom: 40px;
+  filter: drop-shadow(10px 20px 30px black);
+  
+}
+.searchbar .main-searchbar input::placeholder{
+  color: rgb(31, 29, 29);
+  font-weight: bold;
+  opacity: 0.5;
+}
+/* <!----------------------------------!>
+/* ------------ Main Movie ------------*/
+.main-movie{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ 
+}
+.main-boxs{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  
+}
+.boxs{
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+.main-movie img{
+  margin-right: 30px;
+  width: 300px;
+  height: 400px;
+  border-radius:7px;
+  transition: 0.5s ease-in;
+  cursor: pointer;
+}
+.main-movie img:hover{
+  transform: translateY(-20px);
+  filter: drop-shadow(10px 20px 30px black);
+}
+.movie-info{
+  background: linear-gradient(to right,#4d5559,#22495b);
+  width: 300px;
+  
+  margin-top: -100px;
+  color: white;
+  font-weight: bold;
+  border-radius: 8px;
+  visibility: hidden;
+  position: absolute;
+  opacity: 0;
+  transition: visibility 0.5s, opacity 0.5s linear;
+  
+}
+.movie-info-title{
+  font-size: 24px;
+  color:red;
+  margin-top: 10px;
+}
+.main-movie img:hover + .movie-info{
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0.5s opacity 0.5s linear;
+  height: 150px;
+}
+.not-found{
+  font-size: 30px;
+  color: white;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
